  * qemu mode for litmus
  * add  -force option to mrcu forces translation in all conditions.
  * handle the CALL[sync] -> f[sync] change un mrcu
7.21
  * LISA: CALL instructuction reversed to  F instruction. Compatibility
    mode present.
7.20
  * C arch, correct stupid bug in control dependencies
   (forgot if without else....)
7.19
  * herd/cat : empty check also operates on sets.
  * Litmus: noalign meta information
7.18
  * Add a set of data ports to event structures, in order to separate
    data and address dependencies. Brittle on RMW.
  * Add intruction level control dependency (for C).
  * Suppress deprecaton warnings, by writing code in misc...
7.17
  * More Linux macros
  * Locked intructions for X86, simplify setting: 1. suppress atomicity
    component of event structures + set atomicity at event creation time.
7.16
  * Oups trivial bug in filters.cat
7.15
  * Add M. Batty et all's models and take the most advanced
   (with partial orders) one as the C default.
  * Add macros to C arch and bell support
  * Correct x86tso bug + use A in filters as atomic.
7.14
  * <correct> mrcu (check that call[sync] L...U ran at most once
    (replace condition on shared location by specific register, because
     of "last write" problem)
7.13
  * <correct> mrcu (check that call[sync] L...U ran at most once.
7.12
  * tools added mrcu (for rcu translation) => add "filter" component to tests.
7.11
  * tools: correct mcmp (normalize_simple in logState), so as to accept
           flowing model output.
  * tools: add mshowhashes to list test hashes + share code with mdiag
7.10
  * Correct bug in computing ne (not equal): was 1 (true) for two different
    "S" vars...
7.09
  * Internal change of mdiag: diagnostics are more precise.
  * All lexers, ignore '\r'.
  * CAT: make the initial "identity" string optional.
7.08  
  * C11: add NA for non-atomics events (needed by popl15c11 models from the catalogue)
  * LISA: change rmw sematics as fetch_and_op , was op_and_fetch