@@ -1,3 +1,5 @@
+  * litmus option -exit true --> exit status reflects final condition success
+    or failure.
   * qemu mode for litmus
   * add  -force option to mrcu forces translation in all conditions.
   * handle the CALL[sync] -> f[sync] change un mrcu
